# firome

./: .gitignore  LICENSE  README.md  Taskfile.yaml  pyproject.toml  requirements.txt
.github/workflows/: check.yaml  release.yaml
.gitverse/workflows/: check.yaml
firome/: __main__.py  logger.py  logging.py  merge.py
firome/classes/: __init__.py  export.py  points.py
firome/codecs/: __init__.py  errors.py  xml.py
firome/codecs/fit/: __init__.py  parse.py
firome/codecs/gpx/: __init__.py  interpolate.py  parse.py
firome/codecs/tcx/: __init__.py  common.py  export.py
firome/codecs/zip/: __init__.py  errors.py  unzip.py
firome/export/: tcx.py
firome/i18n/: translate.py
firome/i18n/assets/: ui.ini
firome/parsers/: archive.py  errors.py  fit.py  gpx.py  gpx_interpolate.py
firome/translations/: translate.py
firome/translations/assets/: ui.ini
firome/types/: points.py
firome/ui/: __main__.py  main.py  main_ui.py  main_workers.py  translate.py
firome/ui/assets/: main.ui  main_en_US.json  main_ru_RU.json
