[project]
name = "firome"
dynamic = ["version"]
readme = "README.md"
license = {file = "LICENSE"}

[tool.setuptools.dynamic]
version = {attr = "firome.__version__"}

[tool.ruff]
line-length = 120
exclude = ["firome/ui/main_ui.py"] # generated

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
exclude = ["firome/ui/main_ui.py"] # generated
